--- a/prueba.html
+++ b/prueba.html
@@ -1,159 +1,67 @@
-<!--Primera sección-->
-<section class="margin-section content-box" id="about-gib-solutions">
+<!--Navbar-->
+<header class="header">
+  <nav id="navbar" class="navbar navbar-default nav-margin-btn-0 navbar-fixed-top padding-nav" data-scroll-header>
+    <div class="container-fluid">
+       <div class="row">
+         <div class="col-xs-12">
+           <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <button class="collapsed navbar-toggle btn-no-border btn-no-background" type="button" data-toggle="collapse" data-target=".bs-example-js-navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+             <a class="navbar-brand pull-left padding-0 logo-gib" href="../index.html"><img src="../assets/images/logo-gs.png" alt="Logo Gib-Solutions" class="img-responsive"></a>
+           </div>
+
+           <!-- Collect the nav links, forms, and other content for toggling -->
+           <div class="navbar-collapse bs-example-js-navbar-collapse collapse" aria-expanded="false">
+             <ul class="nav navbar-nav navbar-right padding-top-header-ul">
+               <li class="dropdown">
+                 <a href="#" class="dropdown-toggle blue" id="drop1" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" data-scroll><strong>Por qué Gib-Solutions</strong><span class="caret"></span> </a>
+                 <ul class="dropdown-menu" aria-labelledby="drop1">
+                    <li><a href="#" class="blue" id="about-gs" data-scroll><strong>Sobre Gib-Solutions</strong></a></li>
+                    <li><a href="#" class="blue" id="about-us-gs" data-scroll><strong>¿Quiénes somos?</strong></a></li>
+                    <li><a href="#" class="blue" id="objectives-gs" data-scroll><strong>Nuestros objetivos</strong></a></li>
+                    <li><a href="#" class="blue" id="clients-gs" data-scroll><strong>Nuestros clientes</strong></a></li>
+                  </ul>
+               </li>
+               <li><a href="services-products.html" class="blue" data-scroll><strong>Nuestros socios estratégicos</strong></a></li>
+               <li><a href="#" class="blue" id="contact-us-gs" data-scroll><strong>Contáctenos</strong></a></li>
+             </ul>
+           </div>
+         </div>
+       </div>
+    </div><!-- /.container-fluid -->
+  </nav>
+</header>
+
+<!--Sección servicios-->
+<section class="margin-section-products content-box">
   <div class="container-fluid">
     <div class="row">
       <div class="col-sm-12">
-        <h1 class="center-align">Sobre Gib-Solutions</h1>
-        <hr class="hr-style-gib">
-      </div>
-    </div>
-    <div class="row">
-      <div class="flex-direction">
-        <div class="col-xs-12 col-lg-6">
-          <div class="content-box">
-            <br>
-            <h4 class="center-align">Nuestra empresa está formada por un equipo de profesionales altamente calificados con amplia experiencia en desarrollo, gestión, implementación y soporte en soluciones de Monitoreo.</h4>
-            <br>
-            <h4 class="center-align"><strong>GIB </strong> Solutions cuenta con una cartera de clientes, grandes corporaciones nacionales y multinacionales, que depositan su confianza en nuestros servicios, y se convierten en socios estratégicos en la construcción de indicadores de calidad y satisfacción.</h4>
-          </div>
-        </div>
-        <div class="col-xs-12 col-lg-6">
-          <div class="flex content-image-about-gib">
-            <br>
-            <img src="assets/images/monitoring.png" alt="Monitoreo" class="img-responsive border-radius image-about-gib">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!--Segunda sección-->
-<section class="margin-section background-gray padding-second-section" id="about-us">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="content-box">
-        <div class="col-sm-12">
-          <h1 class="center-align">¿Quiénes somos?</h1>
-          <hr class="hr-style-gib">
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-12 padding-second-section">
-        <h4 class="center-align">Somos una empresa con muchos años de experiencia en diferentes soluciones de Monitoreo, lo que nos convierte en la consultora perfecta para ayudarte en la elección de la herramienta idónea que se ajuste a tus requerimientos. </h4>
-        <br>
-        <h4 class="center-align">Tenemos claro que muchas de las infraestructuras y aplicaciones no son las mismas; por este motivo, la mejor solución permitirá una eficiente administración de recursos, para una óptima atención en la resolución de incidencias.</h4>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!--Tercera sección-->
-<section class="margin-section" id="our-objectives">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-12">
-        <h1 class="center-align">Nuestros objetivos</h1>
-        <hr class="hr-style-gib">
-      </div>
-      <div class="col-lg-4 col-sm-4">
-        <div class="content-box-section3">
-          <div class="content"> <!--content-box-->
-            <div class="flex-direction-column">
-              <img src="assets/images/mision.png" alt="Misión" width="140" height="140">
-            </div>
-             <h2 class="center-align"><strong class="blue">Misión</strong></h2>
-             <p class="center-align">Brindar soluciones que apoyen en la gestión de procesos y mejora contínua, logrando calidad y eficiencia en nuestros servicios, mediante uso de buenas prácticas, logrando de esa manera excelencia y competitividad.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-4">
-        <div class="content-box-section3">
-          <div class="content">
-            <div class="flex-direction-column">
-              <img src="assets/images/vision.png" alt="Visión" width="140" height="140">
-            </div>
-             <h2 class="center-align"><strong class="blue">Visión</strong></h2>
-             <p class="center-align">Posicionarnos en el mercado como la empresa líder en consultorías TI, brindando las mejores soluciones tecnológicas a nuestros clientes.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-4">
-        <div class="content-box-section3">
-          <div class="content">
-            <div class="flex-direction-column">
-              <img src="assets/images/proposito.png" alt="Propósito" width="140" height="140">
-            </div>
-             <h2 class="center-align"><strong class="blue">Propósito</strong></h2>
-             <p class="center-align">Garantía de Calidad, Ecología, Ética Profesional, Innovación & Creatividad, Seguridad, Orientación a los resultados.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!--Cuarta sección-->
-<section class="margin-section background-gray content-max-box" id="our-clients">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-lg-12">
-        <h1 class="center-align">Nuestros clientes</h1>
-        <hr class="hr-style-gib">
-      </div>
-    </div>
-    <div class="row">
-      <div class="content-box flex-five-section">
-        <div class="col-xs-12 col-lg-3 flex">
-          <img src="assets/images/telefonica.png" alt="Logo Telefónica" class="img-responsive">
-        </div>
-        <div class="col-xs-12 col-lg-3 flex">
-          <img src="assets/images/ana.jpg" alt="Logo ANA" class="img-responsive">
-        </div>
-        <div class="col-xs-12 col-lg-3 flex">
-          <img src="assets/images/distriluz.png" alt="Logo Distriluz" class="img-responsive">
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="content-box flex-five-section">
-        <div class="col-xs-12 col-lg-3 flex">
-          <img src="assets/images/italtel.jpg" alt="Logo Italtel" class="img-responsive">
-        </div>
-        <div class="col-xs-12 col-lg-3 flex">
-          <img src="assets/images/newrelic.png" alt="Logo New Relic" class="img-responsive">
-        </div>
-        <div class="col-xs-12 col-lg-3 flex">
-          <img src="assets/images/sunarp.png" alt="Logo Sunarp" class="img-responsive">
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="margin-section" id="contact-us">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-12">
-        <h1 class="center-align">Contáctenos</h1>
+        <h1 class="center-align">Nuestros servicios</h1>
         <hr class="hr-style-gib">
         <br>
       </div>
     </div>
     <div class="row">
-      <div class="flex-direction-column">
-        <div class="col-lg-4">
-          <div class="card-contact">
-            <address class="center-align">
-              <strong class="center-align">Gib-Solutions</strong><br>
-                San Juan de Miraflores<br>
-                Lima - Perú<br>
-                <abbr title="Phone">Tel: </abbr> 939 113 366
-            </address>
-            <address class="center-align">
-              <a href="mailto:#">contacto@gib-solutions.com</a>
-            </address>
+      <div class="flex-direction-inline margin-top-70">
+        <div class="col-lg-4 col-sm-4">
+          <div class="flex-direction-column style-box-services">
+            <h3 class="center-align letter-services">Soporte técnico en soluciones de monitoreo.</h3>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-4">
+          <div class="flex-direction-column style-box-services">
+            <h3 class="center-align letter-services">Consultoría TI en soluciones de monitoreo.</h3>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-4">
+          <div class="flex-direction-column style-box-services">
+            <h3 class="center-align letter-services">Capacitaciones en soluciones de monitoreo (Solarwinds, Pandora, Dynatrace).</h3>
           </div>
         </div>
       </div>
@@ -161,6 +69,53 @@
   </div>
 </section>
 
+<!--Sección productos-->
+<section class="margin-section-products background-gray padding-box-products">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-12">
+        <h1 class="center-align">Nuestros productos</h1>
+        <hr class="hr-style-gib">
+        <br>
+      </div>
+    </div>
+    <div class="row margin-top-70">
+      <div class="col-lg-4 col-sm-12 col-md-4">
+        <div class="content-box">
+          <div class="flex-direction-column style-box-products">
+            <img class="img-responsive" src="../assets/images/dynatrace2.png" alt="Dynatrace">
+            <h2>Dynatrace</h2>
+            <br>
+            <p class="center-align">Dynatrace ofrece monitorización automática a nivel de código en aplicaciones desarrolladas con GO, incluidas plataformas empresariales como Cloud Foundry, Kubernetes y OpenShift.</p>
+            <p><a class="btn btn-default" href="#" role="button">Ver detalles</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-12 col-md-4">
+        <div class="content-box">
+          <div class="flex-direction-column style-box-products">
+            <img class="img-responsive" src="../assets/images/pandora.png" alt="PandoraFMS">
+            <h2>Pandora FMS</h2>
+            <br>
+            <p class="center-align">Pandora FMS es un software de monitorización OpenSource para gestión de infraestructura TI: redes, servidores, infraestructura virtualizada y aplicaciones.</p>
+            <p><a class="btn btn-default" href="#" role="button">Ver detalles</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-12 col-md-4">
+        <div class="content-box">
+          <div class="flex-direction-column style-box-products">
+            <img class="img-responsive" src="../assets/images/nagios.png" alt="Nagios">
+            <h2>Nagios</h2>
+            <br>
+            <p class="center-align">Nagios es actualmente un estándar en la monitorización de la infraestructura TI. Es open source y permite monitorizar todos los componentes críticos de la infraestructura TI de cualquier organización, incluyendo métricas de sistema, protocolos de red, aplicaciones, servidores e infraestructura de red.</p>
+            <p><a class="btn btn-default" href="#" role="button">Ver detalles</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 <footer class="content-box">
   <div class="container-fluid">
     <div class="row">
