--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
   <body>
     <!--Navbar-->
     <header class="header">
-      <nav id="navbar" class="navbar navbar-expand-lg nav-margin-btn-0 navbar-fixed-top padding-nav" data-scroll-header>
-        <a class="navbar-brand padding-0 logo-gib" href="#"><img src="assets/images/logo-gs.png" alt="Logo Gib-Solutions" class="img-fluid d-inline-block align-top"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <nav id="navbar" class="navbar navbar-light navbar-expand-lg nav-margin-btn-0 navbar-fixed-top padding-nav" data-scroll-header>
+        <a class="navbar-brand padding-0 logo-gib" href="index.html"><img src="assets/images/logo-gs.png" alt="Logo Gib-Solutions" class="img-fluid d-inline-block align-top"></a>
+        <button class="navbar-toggler border-none" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto  padding-top-header-ul">
+          <ul class="navbar-nav ml-auto  padding-top-header-ul content-box">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <strong>Sobre Gib-Solutions</strong>
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item blue" href="#about-gib-solutions"><strong>¿Quiénes somos?</strong></a>
-                <a class="dropdown-item blue" href="#about-us" data-scroll><strong>Nuestros objetivos</strong></a>
+                <a class="dropdown-item blue" href="#about-us"><strong>¿Quiénes somos?</strong></a>
+                <a class="dropdown-item blue" href="#our-objectives" data-scroll><strong>Nuestros objetivos</strong></a>
                 <a class="dropdown-item blue" href="#our-clients" data-scroll><strong>Nuestros clientes</strong></a>
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link blue" href="views/services-products.htm" data-scroll><strong>Nuestros servicios y productos</strong></a>
+              <a class="nav-link blue" href="views/services-partners.html" data-scroll><strong>Nuestros servicios y socios</strong></a>
             </li>
             <li class="nav-item">
               <a class="nav-link blue" href="#contact-us" data-scroll><strong>Contáctenos</strong></a>
@@ -47,23 +47,23 @@
       </nav>
     </header>
 
+
     <!--Sección 'hero'-->
-    <section class="hero">
+    <section>
       <div class="container-fluid">
         <div class="row"> <!--row-margin-0-->
-          <div class="col-12">
+          <div class="col-12 container-padding-0">
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
-                <div class="carousel-item">
-                  <img src="assets/images/monitoreo1.jpg" alt="imagen 1" class="img-responsive filter-img">
-                  <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-item active height-70">
+                  <img src="assets/images/monitoreo1.jpg" alt="imagen 1" class="img-fluid filter-image-responsive filter-img">
+                  <div class="carousel-caption">
                     <h5 class="text-shadow">¿Necesitas elegir la mejor solución de monitoreo?</h5>
-                    <p class="text-shadow">...</p>
                   </div>
                 </div>
-                <div class="carousel-item">
-                  <img src="assets/images/monitoreo2.jpg" alt="imagen 2" class="img-fluid filter-img">
-                  <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-item height-70">
+                  <img src="assets/images/monitoreo2.jpg" alt="imagen 2" class="img-fluid filter-image-responsive filter-img">
+                  <div class="carousel-caption">
                     <h5 class="text-shadow">¡Servimos con pasión!</h5>
                     <p class="text-shadow">La filosofía de nuestro equipo humano es la excelencia en el servicio.</p>
                   </div>
@@ -77,16 +77,201 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
               </a>
-             </div>
             </div>
-		 	      </div>
-		       </div>
-	       </section>
+          </div>
+    		</div>
+    	</div>
+    </section>
 
+    <!--Primera sección-->
+    <section class="margin-section content-box" id="about-gib-solutions">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12">
+            <h1 class="center-align">Sobre Gib-Solutions</h1>
+            <hr class="hr-style-gib">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 col-md-6">
+            <div class="content-box margin-top-70">
+              <br>
+              <h5 class="center-align">Nuestra empresa está formada por un equipo de profesionales altamente calificados con amplia experiencia en desarrollo, gestión, implementación y soporte en soluciones de Monitoreo.</h5>
+              <br>
+              <h5 class="center-align"><strong>GIB </strong> Solutions cuenta con una cartera de clientes, grandes corporaciones nacionales y multinacionales, que depositan su confianza en nuestros servicios, y se convierten en socios estratégicos en la construcción de indicadores de calidad y satisfacción.</h5>
+            </div>
+          </div>
+          <div class="col-12 col-md-6">
+            <div class="flex content-image-about-gib">
+              <br>
+              <img src="assets/images/monitoring.png" alt="Monitoreo" class="img-fluid border-radius image-about-gib">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--Segunda sección-->
+    <section class="margin-section background-gray padding-second-section" id="about-us">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12">
+            <h1 class="center-align">¿Quiénes somos?</h1>
+            <hr class="hr-style-gib">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 padding-second-section">
+            <h4 class="center-align">Somos una empresa con muchos años de experiencia en diferentes soluciones de Monitoreo, lo que nos convierte en la consultora perfecta para ayudarte en la elección de la herramienta idónea que se ajuste a tus requerimientos. </h4>
+            <br>
+            <h4 class="center-align">Tenemos claro que muchas de las infraestructuras y aplicaciones no son las mismas; por este motivo, la mejor solución permitirá una eficiente administración de recursos, para una óptima atención en la resolución de incidencias.</h4>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--Tercera sección-->
+    <section class="margin-section" id="our-objectives">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12">
+            <h1 class="center-align">Nuestros objetivos</h1>
+            <hr class="hr-style-gib">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 col-md-4">
+            <div class="content-box-section3">
+              <div class="content-box">
+                <div class="flex-direction-column margin-btm-30">
+                  <img src="assets/images/mision.png" alt="Misión" width="140" height="140" class="img-fluid">
+              </div>
+              <h2 class="center-align"><strong class="blue">Misión</strong></h2>
+              <p class="center-align">Brindar soluciones que apoyen en la gestión de procesos y mejora contínua, logrando calidad y eficiencia en nuestros servicios, mediante uso de buenas prácticas, logrando de esa manera excelencia y competitividad.</p>
+            </div>
+           </div>
+          </div>
+          <div class="col-12 col-md-4">
+            <div class="content-box-section3">
+              <div class="content-box">
+                <div class="flex-direction-column margin-btm-30">
+                  <img src="assets/images/vision.png" alt="Visión" width="140" height="140" class="img-fluid">
+                </div>
+                <h2 class="center-align"><strong class="blue">Visión</strong></h2>
+                <p class="center-align">Posicionarnos en el mercado como la empresa líder en consultorías TI, brindando las mejores soluciones tecnológicas a nuestros clientes.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4">
+            <div class="content-box-section3">
+              <div class="content-box">
+                <div class="flex-direction-column margin-btm-30">
+                  <img src="assets/images/proposito.png" alt="Propósito" width="140" height="140" class="img-fluid">
+                </div>
+                <h2 class="center-align"><strong class="blue">Propósito</strong></h2>
+                <p class="center-align">Garantía de Calidad, Ecología, Ética Profesional, Innovación & Creatividad, Seguridad, Orientación a los resultados.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
+    </section>
+
+    <!--Cuarta sección-->
+    <section class="margin-section background-gray content-max-box" id="our-clients">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-12">
+            <h1 class="center-align">Nuestros clientes</h1>
+            <hr class="hr-style-gib">
+          </div>
+        </div>
+        <div class="row flex">
+          <div class="col-12 col-md-4 col-xl-3 flex">
+            <div class="content-padding-image">
+              <img src="assets/images/telefonica.png" alt="Logo Telefónica" class="img-fluid">
+            </div>
+          </div>
+          <div class="col-12 col-md-4 col-xl-3 flex">
+            <div class="content-padding-image">
+              <img src="assets/images/ana.jpg" alt="Logo ANA" class="img-fluid">
+            </div>
+          </div>
+          <div class="col-12 col-md-4 col-xl-3 flex">
+            <div class="content-padding-image">
+              <img src="assets/images/distriluz.png" alt="Logo Distriluz" class="img-fluid">
+            </div>
+          </div>
+        </div>
+        <div class="row flex">
+          <div class="col-12 col-md-4 col-xl-3 flex">
+            <div class="content-padding-image">
+              <img src="assets/images/italtel.jpg" alt="Logo Italtel" class="img-fluid">
+            </div>
+          </div>
+          <div class="col-12 col-md-4 col-xl-3 flex">
+            <div class="content-padding-image">
+              <img src="assets/images/newrelic.png" alt="Logo New Relic" class="img-fluid">
+            </div>
+          </div>
+          <div class="col-12 col-md-4 col-xl-3 flex">
+            <div class="content-padding-image">
+              <img src="assets/images/sunarp.png" alt="Logo Sunarp" class="img-fluid">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--Quinta sección-->
+
+    <section class="margin-section" id="contact-us">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12">
+            <h1 class="center-align">Contáctenos</h1>
+            <hr class="hr-style-gib">
+            <br>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 col-md-4 offset-md-4">
+            <div class="card-contact">
+              <address class="center-align">
+                <strong class="center-align">Gib-Solutions</strong><br>
+                  San Juan de Miraflores<br>
+                  Lima - Perú<br>
+                  <abbr title="Phone">Tel: </abbr> 939 113 366
+              </address>
+              <address class="center-align">
+                <a href="mailto:#">contacto@gib-solutions.com</a>
+              </address>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="content-box">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12">
+            <p class="center-align white">Copyright © GIB Solutions 2019</p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
 
     <script type="text/javascript" src="vendor/jQuery/jquery-3.2.1.min.js"></script>
     <script ype="text/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="vendor/smooth-scroll.min.js"></script>
+    <script>
+       var scroll = new SmoothScroll('a[href*="#"]', {
+         header: '[data-scroll-header]'
+       });
+    </script>
   </body>
 </html>
