Modificando estilos de letras

--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
                 <div class="carousel-item active height-70">
                   <img src="assets/images/monitoreo1.jpg" alt="imagen 1" class="img-fluid filter-image-responsive filter-img">
                   <div class="carousel-caption">
-                    <h5 class="text-shadow">¿Necesitas elegir la mejor solución de monitoreo?</h5>
+                    <h2 class="text-shadow">¿Necesitas elegir la mejor solución de monitoreo?</h2>
                   </div>
                 </div>
                 <div class="carousel-item height-70">
                   <img src="assets/images/monitoreo2.jpg" alt="imagen 2" class="img-fluid filter-image-responsive filter-img">
                   <div class="carousel-caption">
-                    <h5 class="text-shadow">¡Servimos con pasión!</h5>
-                    <p class="text-shadow">La filosofía de nuestro equipo humano es la excelencia en el servicio.</p>
+                    <h2 class="text-shadow">¡Servimos con pasión!</h2>
+                    <h3 class="text-shadow">La filosofía de nuestro equipo humano es la excelencia en el servicio.</h3>
                   </div>
                 </div>
               </div>
@@ -243,7 +243,7 @@
                 <strong class="center-align">Gib-Solutions</strong><br>
                   San Juan de Miraflores<br>
                   Lima - Perú<br>
-                  <abbr title="Phone">Tel: </abbr> 939 113 366
+                  <abbr>Tel: </abbr> 939 113 366
               </address>
               <address class="center-align">
                 <a href="mailto:#">contacto@gib-solutions.com</a>
