Mejorando estilos generales

--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
           <div class="col-12 container-padding-0" style="padding: 0;">
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
-                <div class="carousel-item active height-70">
+                <div class="carousel-item active height-85">
                   <img src="assets/images/monitoreo1.jpg" alt="imagen 1" class="img-fluid filter-image-responsive filter-img">
-                  <div class="carousel-caption">
+                  <div class="carousel-caption d-none d-md-block">
                     <h2 class="text-shadow">¿Necesitas elegir la mejor solución de monitoreo?</h2>
                   </div>
                 </div>
-                <div class="carousel-item height-70">
+                <div class="carousel-item height-85">
                   <img src="assets/images/monitoreo2.jpg" alt="imagen 2" class="img-fluid filter-image-responsive filter-img">
-                  <div class="carousel-caption">
+                  <div class="carousel-caption d-none d-md-block">
                     <h2 class="text-shadow">¡Servimos con pasión!</h2>
                     <h3 class="text-shadow">La filosofía de nuestro equipo humano es la excelencia en el servicio.</h3>
                   </div>
@@ -167,9 +167,9 @@
             <div class="content-box-section3">
               <div class="content-box">
                 <div class="flex-direction-column margin-btm-30">
-                  <img src="assets/images/proposito.png" alt="Propósito" width="140" height="140" class="img-fluid">
+                  <img src="assets/images/valores.png" alt="Valores" width="140" height="140" class="img-fluid">
                 </div>
-                <h2 class="center-align"><strong class="blue">Propósito</strong></h2>
+                <h2 class="center-align"><strong class="blue">Valores</strong></h2>
                 <p class="center-align">Garantía de Calidad, Ecología, Ética Profesional, Innovación & Creatividad, Seguridad, Orientación a los resultados.</p>
               </div>
             </div>
