--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </section>
 
     <!--Primera sección-->
-    <section class="margin-section content-box" id="about-gib-solutions">
+    <section class="padding-section content-box background-gray" id="about-gib-solutions">
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
@@ -103,9 +103,11 @@
             </div>
           </div>
           <div class="col-12 col-md-6">
-            <div class="flex content-image-about-gib">
-              <br>
-              <img src="assets/images/monitoring.png" alt="Monitoreo" class="img-fluid border-radius image-about-gib">
+            <div class="flex zoom-effect-container">
+              <div class="image-card">
+                <br>
+                <img src="assets/images/monitoring.png" alt="Monitoreo" class="img-fluid image-about-gib">
+              </div>
             </div>
           </div>
         </div>
@@ -113,7 +115,7 @@
     </section>
 
     <!--Segunda sección-->
-    <section class="margin-section background-gray padding-second-section" id="about-us">
+    <section class="padding-section padding-second-section" id="about-us">
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
@@ -132,7 +134,7 @@
     </section>
 
     <!--Tercera sección-->
-    <section class="margin-section" id="our-objectives">
+    <section class="padding-section background-gray" id="our-objectives">
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
@@ -180,7 +182,7 @@
     </section>
 
     <!--Cuarta sección-->
-    <section class="margin-section background-gray content-max-box" id="our-clients">
+    <section class="padding-section content-max-box" id="our-clients">
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-12">
@@ -190,35 +192,47 @@
         </div>
         <div class="row flex">
           <div class="col-12 col-md-4 col-xl-3 flex">
-            <div class="content-padding-image">
-              <img src="assets/images/telefonica.png" alt="Logo Telefónica" class="img-fluid">
+            <div class="content-padding-image zoom-effect-container-clients">
+              <div class="image-card">
+                <img src="assets/images/telefonica.png" alt="Logo Telefónica" class="img-fluid">
+              </div>
             </div>
           </div>
           <div class="col-12 col-md-4 col-xl-3 flex">
-            <div class="content-padding-image">
-              <img src="assets/images/ana.jpg" alt="Logo ANA" class="img-fluid">
+            <div class="content-padding-image zoom-effect-container-clients">
+              <div class="image-card">
+                <img src="assets/images/ana.jpg" alt="Logo ANA" class="img-fluid">
+              </div>
             </div>
           </div>
           <div class="col-12 col-md-4 col-xl-3 flex">
-            <div class="content-padding-image">
-              <img src="assets/images/distriluz.png" alt="Logo Distriluz" class="img-fluid">
+            <div class="content-padding-image zoom-effect-container-clients">
+              <div class="image-card">
+                <img src="assets/images/distriluz.png" alt="Logo Distriluz" class="img-fluid">
+              </div>
             </div>
           </div>
         </div>
         <div class="row flex">
           <div class="col-12 col-md-4 col-xl-3 flex">
-            <div class="content-padding-image">
-              <img src="assets/images/italtel.jpg" alt="Logo Italtel" class="img-fluid">
+            <div class="content-padding-image zoom-effect-container-clients">
+              <div class="image-card">
+                <img src="assets/images/italtel.jpg" alt="Logo Italtel" class="img-fluid">
+              </div>
             </div>
           </div>
           <div class="col-12 col-md-4 col-xl-3 flex">
-            <div class="content-padding-image">
-              <img src="assets/images/newrelic.png" alt="Logo New Relic" class="img-fluid">
+            <div class="content-padding-image zoom-effect-container-clients">
+              <div class="image-card">
+                <img src="assets/images/newrelic.png" alt="Logo New Relic" class="img-fluid">
+              </div>
             </div>
           </div>
           <div class="col-12 col-md-4 col-xl-3 flex">
-            <div class="content-padding-image">
-              <img src="assets/images/sunarp.png" alt="Logo Sunarp" class="img-fluid">
+            <div class="content-padding-image zoom-effect-container-clients">
+              <div class="image-card">
+                <img src="assets/images/sunarp.png" alt="Logo Sunarp" class="img-fluid">
+              </div>
             </div>
           </div>
         </div>
@@ -227,7 +241,7 @@
 
     <!--Quinta sección-->
 
-    <section class="margin-section" id="contact-us">
+    <section class="padding-section background-gray" id="contact-us">
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
@@ -237,17 +251,37 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-12 col-md-4 offset-md-4">
+          <div class="col-12 col-md-4">
             <div class="card-contact">
-              <address class="center-align">
-                <strong class="center-align">Gib-Solutions</strong><br>
-                  San Juan de Miraflores<br>
-                  Lima - Perú<br>
-                  <abbr>Tel: </abbr> 939 113 366
-              </address>
-              <address class="center-align">
-                <a href="mailto:#">contacto@gib-solutions.com</a>
-              </address>
+              <div class="card-image">
+                <img src="assets/images/telefono.png" alt="Teléfono Gib-Solutions" class="img-fluid">
+              </div>
+              <div class="card-letter">
+                <p class="center-align">Teléfono:</p>
+                <p class="center-align">939 113 366</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4">
+            <div class="card-contact">
+              <div class="card-image">
+                <img src="assets/images/correo.png" alt="Correo Gib-Solutions" class="img-fluid">
+              </div>
+              <div class="card-letter">
+                <p class="center-align"><a href="mailto:#">contacto@gib-solutions.com</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4">
+            <div class="card-contact">
+              <div class="card-image">
+                <img src="assets/images/ubicacion.png" alt="Ubicación Gib-Solutions" class="img-fluid">
+              </div>
+              <div class="card-letter">
+                <p class="center-align">Gib - Solutions</p>
+                <p class="center-align">San Juan de Miraflores</p>
+                <p class="center-align">Lima - Perú</p>
+              </div>
             </div>
           </div>
         </div>
