Mejorando estilos generales en segunda vista

--- a/index.html
+++ b/index.html
@@ -257,8 +257,11 @@
                 <img src="assets/images/telefono.png" alt="Teléfono Gib-Solutions" class="img-fluid">
               </div>
               <div class="card-letter">
-                <p class="center-align">Teléfono:</p>
-                <p class="center-align">939 113 366</p>
+                <address class="center-align">
+                  <strong class="center-align">Teléfono:</strong>
+                  <br>
+                  <strong class="center-align">939 113 366</strong>
+                </address>
               </div>
             </div>
           </div>
@@ -278,9 +281,13 @@
                 <img src="assets/images/ubicacion.png" alt="Ubicación Gib-Solutions" class="img-fluid">
               </div>
               <div class="card-letter">
-                <p class="center-align">Gib - Solutions</p>
-                <p class="center-align">San Juan de Miraflores</p>
-                <p class="center-align">Lima - Perú</p>
+                <address class="center-align">
+                  <strong class="center-align">Gib - Solutions</strong>
+                  <br>
+                  <strong class="center-align">San Juan de Miraflores</strong>
+                  <br>
+                  <strong class="center-align">Lima - Perú</strong>
+                </address>
               </div>
             </div>
           </div>
