Mejorando estilos en carrusel

--- a/index.html
+++ b/index.html
@@ -54,27 +54,27 @@
       <div class="container-fluid">
         <div class="row"> <!--row-margin-0-->
           <div class="col-12 container-padding-0" style="padding: 0;">
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active height-85">
-                  <img src="assets/images/monitoreo1.jpg" alt="imagen 1" class="img-fluid filter-image-responsive filter-img">
+                  <img src="assets/images/monitoreo1.jpg" alt="imagen 1" class="d-block w-100 img-fluid filter-image-responsive filter-img">
                   <div class="carousel-caption d-none d-md-block">
                     <h2 class="text-shadow">¿Necesitas elegir la mejor solución de monitoreo?</h2>
                   </div>
                 </div>
                 <div class="carousel-item height-85">
-                  <img src="assets/images/monitoreo2.jpg" alt="imagen 2" class="img-fluid filter-image-responsive filter-img">
+                  <img src="assets/images/monitoreo2.jpg" alt="imagen 2" class="d-block w-100 img-fluid filter-image-responsive filter-img">
                   <div class="carousel-caption d-none d-md-block">
                     <h2 class="text-shadow">¡Servimos con pasión!</h2>
                     <h3 class="text-shadow">La filosofía de nuestro equipo humano es la excelencia en el servicio.</h3>
                   </div>
                 </div>
               </div>
-              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
               </a>
-              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
               </a>
