--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <!--Navbar-->
     <header class="header">
-      <nav id="navbar" class="navbar navbar-light navbar-expand-lg nav-margin-btn-0 navbar-fixed-top padding-nav" data-scroll-header>
+      <nav id="navbar" class="navbar navbar-light navbar-expand-lg nav-margin-btn-0 navbar-fixed-top padding-nav">
         <a class="navbar-brand padding-0 logo-gib" href="index.html"><img src="assets/images/logo-gs.png" alt="Logo Gib-Solutions" class="img-fluid d-inline-block align-top" style="width:inherit; height:100%;"></a>
         <button class="navbar-toggler border-none" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -32,16 +32,16 @@
                 <strong>Sobre Gib-Solutions</strong>
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item blue" href="#about-us"><strong>¿Quiénes somos?</strong></a>
-                <a class="dropdown-item blue" href="#our-objectives" data-scroll><strong>Nuestros objetivos</strong></a>
-                <a class="dropdown-item blue" href="#our-clients" data-scroll><strong>Nuestros clientes</strong></a>
+                <a class=" dropdown-item blue" href="#about-us"><strong>¿Quiénes somos?</strong></a>
+                <a class="dropdown-item blue" href="#our-objectives"><strong>Nuestros objetivos</strong></a>
+                <a class="dropdown-item blue" href="#our-clients"><strong>Nuestros clientes</strong></a>
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link blue" href="views/services-partners.html" data-scroll><strong>Nuestros servicios y socios</strong></a>
+              <a class="nav-link blue" href="views/services-partners.html"><strong>Nuestros servicios y socios</strong></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link blue" href="#contact-us" data-scroll><strong>Contáctenos</strong></a>
+              <a class="nav-link blue" href="#contact-us"><strong>Contáctenos</strong></a>
             </li>
           </ul>
         </div>
@@ -310,11 +310,6 @@
     <script ype="text/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script ype="text/javascript" src="vendor/bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="vendor/smooth-scroll.min.js"></script>
-    <script>
-       var scroll = new SmoothScroll('a[href*="#"]', {
-         header: '[data-scroll-header]'
-       });
-    </script>
+    <script type="text/javascript" src="js/scrollNav.js"></script>
   </body>
 </html>
